--- a/src/styles/datePicker.css
+++ b/src/styles/datePicker.css
@@ -1,1 +1,22 @@
+header {
+    width: 220px;
+    position: relative;
+    font-size: 14px;
+    user-select: none;
+}
 
+.date-input {
+    background-color: #fff;
+    background-image: none;
+    border-radius: 4px;
+    border: 1px solid #dcdfe6;
+    box-sizing: border-box;
+    color: #606266;
+    display: inline-block;
+    height: 40px;
+    line-height: 40px;
+    outline: none;
+    padding: 0 30px 0 12px;
+    width: 100%;
+    cursor: pointer;
+}
