--- a/public/iconfont.css
+++ b/public/iconfont.css
@@ -5,10 +5,18 @@
 
 .iconfont {
   font-family: "iconfont" !important;
-  font-size: 16px;
+  font-size: 30px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: absolute;
+  width: 30px;
+  height: 100%;
+  right: 0;
+  top: 5px;
+  text-align: center;
+  color: #bfcbd9;
+  transition: all .3s;
 }
 
 .icon-arrow-double-left:before {
