refactor: change position of some import commands

--- a/public/iconfont.css
+++ b/public/iconfont.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "iconfont"; /* Project id  */
+  font-family: "iconfont";
   src: url('./iconfont.ttf') format('truetype');
 }
 
