--- a/src/components/DatePicker/datePicker.css
+++ b/src/components/DatePicker/datePicker.css
@@ -20,3 +20,13 @@
     width: 100%;
     cursor: pointer;
 }
+
+.date-pick-icon {
+    position: absolute;
+    width: 30px;
+    height: 100%;
+    right: 0;
+    top: 10px;
+    text-align: center;
+    transition: all .3s;
+}
