feat: add animation for Popup component use CSSTransition

--- a/src/components/Popup/popup.css
+++ b/src/components/Popup/popup.css
@@ -10,4 +10,35 @@
   box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
   background: #fff;
   border-radius: 4px;
+
+  overflow: hidden;
+  opacity: 0;
+}
+
+.popup-enter {
+  opacity: 0;
+  transform: translateY(0);
+}
+.popup-enter-active {
+  opacity: 1;
+  transform: translateY(10px);
+  transition: opacity 200ms, transform 200ms;
+}
+.popup-enter-done {
+  opacity: 1;
+  transform: translateY(10px);
+}
+
+.popup-exit {
+  opacity: 1;
+  transform: translateY(10px);
+}
+.popup-exit-active {
+  opacity: 0;
+  transform: translateY(0);
+  transition: opacity 200ms, transform 200ms;
+}
+.popup-exit-done {
+  opacity: 0;
+  transform: translateY(0);
 }
